// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createBooking testing BookingFilter snapshot testing for floor view 1`] = `
<DocumentFragment>
  <span>
    <span
      class="strong"
    >
      Filter By
    </span>
    <span
      class="ml-3"
    >
      <div
        class="mr-2 btn-group"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="whiteDropDown bg-white py-1 dropdown-toggle btn btn-secondary"
          type="button"
        >
          Floor #10
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="text-center  dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Floor #10
          </button>
        </div>
      </div>
    </span>
    <button
      class="ml-1 roundCorners btn-outline-secondary-white btn btn-outline-secondary btn-sm"
      id="calendarPopover"
      type="button"
    >
      Date/Time
    </button>
    <div
      class="ml-2 btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="whiteDropDown py-1 dropdown-toggle btn btn-secondary"
        type="button"
      >
        Categories
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="px-2 dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <img
            alt="workspace"
            class="mt-n1"
            height="25"
            src="undefined/web/image/mro.asset.category/211/image_medium/211.png"
            width="25"
          />
          <span
            class="ml-1"
          >
            Conference Room
          </span>
        </button>
        <button
          class="px-2 dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <img
            alt="workspace"
            class="mt-n1"
            height="25"
            src="undefined/web/image/mro.asset.category/212/image_medium/212.png"
            width="25"
          />
          <span
            class="ml-1"
          >
            Work Station
          </span>
        </button>
      </div>
    </div>
    <button
      class="float-right btn btn-secondary btn-sm"
      id="refresh"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-sync-alt fa-w-16 fa-2x refresh-icon text-center"
        data-icon="sync-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M370.72 133.28C339.458 104.008 298.888 87.962 255.848 88c-77.458.068-144.328 53.178-162.791 126.85-1.344 5.363-6.122 9.15-11.651 9.15H24.103c-7.498 0-13.194-6.807-11.807-14.176C33.933 94.924 134.813 8 256 8c66.448 0 126.791 26.136 171.315 68.685L463.03 40.97C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.749zM32 296h134.059c21.382 0 32.09 25.851 16.971 40.971l-41.75 41.75c31.262 29.273 71.835 45.319 114.876 45.28 77.418-.07 144.315-53.144 162.787-126.849 1.344-5.363 6.122-9.15 11.651-9.15h57.304c7.498 0 13.194 6.807 11.807 14.176C478.067 417.076 377.187 504 256 504c-66.448 0-126.791-26.136-171.315-68.685L48.97 471.03C33.851 486.149 8 475.441 8 454.059V320c0-13.255 10.745-24 24-24z"
          fill="currentColor"
        />
      </svg>
    </button>
  </span>
</DocumentFragment>
`;

exports[`createBooking testing BookingFilter snapshot testing for tree view 1`] = `
<DocumentFragment>
  <span>
    <span
      class="strong"
    >
      Filter By
    </span>
    <span
      class="ml-3"
    />
    <button
      class="ml-1 roundCorners btn-outline-secondary-white btn btn-outline-secondary btn-sm"
      id="calendarPopover"
      type="button"
    >
      Date/Time
    </button>
    <div
      class="ml-2 btn-group"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="whiteDropDown py-1 dropdown-toggle btn btn-secondary"
        type="button"
      >
        Categories
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="px-2 dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <img
            alt="workspace"
            class="mt-n1"
            height="25"
            src="undefined/web/image/mro.asset.category/211/image_medium/211.png"
            width="25"
          />
          <span
            class="ml-1"
          >
            Conference Room
          </span>
        </button>
        <button
          class="px-2 dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <img
            alt="workspace"
            class="mt-n1"
            height="25"
            src="undefined/web/image/mro.asset.category/212/image_medium/212.png"
            width="25"
          />
          <span
            class="ml-1"
          >
            Work Station
          </span>
        </button>
      </div>
    </div>
    <button
      class="float-right btn btn-secondary btn-sm"
      id="refresh"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-sync-alt fa-w-16 fa-2x refresh-icon text-center"
        data-icon="sync-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M370.72 133.28C339.458 104.008 298.888 87.962 255.848 88c-77.458.068-144.328 53.178-162.791 126.85-1.344 5.363-6.122 9.15-11.651 9.15H24.103c-7.498 0-13.194-6.807-11.807-14.176C33.933 94.924 134.813 8 256 8c66.448 0 126.791 26.136 171.315 68.685L463.03 40.97C478.149 25.851 504 36.559 504 57.941V192c0 13.255-10.745 24-24 24H345.941c-21.382 0-32.09-25.851-16.971-40.971l41.75-41.749zM32 296h134.059c21.382 0 32.09 25.851 16.971 40.971l-41.75 41.75c31.262 29.273 71.835 45.319 114.876 45.28 77.418-.07 144.315-53.144 162.787-126.849 1.344-5.363 6.122-9.15 11.651-9.15h57.304c7.498 0 13.194 6.807 11.807 14.176C478.067 417.076 377.187 504 256 504c-66.448 0-126.791-26.136-171.315-68.685L48.97 471.03C33.851 486.149 8 475.441 8 454.059V320c0-13.255 10.745-24 24-24z"
          fill="currentColor"
        />
      </svg>
    </button>
  </span>
</DocumentFragment>
`;

exports[`createBooking testing BookingLayout snapshot testing 1`] = `
<DocumentFragment>
  <div
    class="mt-3 row"
  >
    <div
      class="col-sm-12 col-md-12 col-lg-12"
    >
      <div
        class="row"
      >
        <div
          class="mb-3 col-3 col-sm-2 col-md-2 col-lg-1"
        >
          <img
            alt="bookingProcess"
            height="50"
            src="[object Object]"
            width="50"
          />
        </div>
        <div
          class="pl-0 ml-n2 col-6 col-sm-7 col-md-7 col-lg-8"
        >
          <h2>
            Book Meeting Room / Desk / Office
          </h2>
        </div>
        <div
          class="col-3 col-sm-3 col-md-3 col-lg-3"
        >
          <button
            class="btn buttonGrey py-0 px-2 float-right greyButton btn btn-outline-secondary"
            type="button"
          >
            Close
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-times-circle fa-w-16 ml-1"
              data-icon="times-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="bufferBackground card-header"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-sm-12 col-md-5 col-lg-3"
            >
              Layout
            </div>
            <div
              class="col-12 col-sm-12 col-md-7 col-lg-9"
            />
          </div>
        </div>
        <div
          class="card-body"
        >
          <div>
            <div
              class="row"
            >
              <div
                class="col-sm-12"
              >
                <div
                  class="ml-0 row"
                >
                  <h3
                    class="text-capitalize font-weight-800"
                  >
                    Thursday 1  February 2001
                  </h3>
                    -  
                  <h3
                    class="text-capitalize font-weight-800"
                  >
                    Saturday 1  January 2000
                  </h3>
                </div>
                <div
                  class="font-weight-500 "
                >
                  Shift B,
                  <span
                    class="ml-2"
                  >
                    09:30 AM US/Central - 05:30 PM US/Central
                  </span>
                </div>
              </div>
              <div
                class="mt-2 col-sm-7"
              />
            </div>
            <div
              class="row"
            >
              <div
                class="pl-0 col-sm-4 col-md-3 col-lg-2"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-3 MuiRadio-root Component-root-1 PrivateSwitchBase-checked-4 Mui-checked Component-checked-2"
                  data-testid="individual"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input-6"
                      type="radio"
                      value="individual"
                    />
                    <div
                      class="PrivateRadioButtonIcon-root-7 PrivateRadioButtonIcon-checked-9"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-8"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                Individual
              </div>
              <div
                class="pl-0 col-sm-4 col-md-3 col-lg-2"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-3 MuiRadio-root Component-root-1"
                  data-testid="group"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input-6"
                      type="radio"
                      value="group"
                    />
                    <div
                      class="PrivateRadioButtonIcon-root-7"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-8"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
                Group
              </div>
            </div>
          </div>
          <div>
            <div
              class="mb-4 mt-2 row"
            >
              <div
                class="col-sm-12 col-md-12 col-lg-6"
              >
                <div
                  class=" css-14jk2my-container"
                >
                  <div
                    class=" css-1fhf3k1-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class=" css-107lb6w-singleValue"
                      >
                        Raja
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            disabled=""
                            id="react-select-2-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-109onse-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="text-right mt-3 mr-2 mb-1"
                >
                  <img
                    alt="reset"
                    class="outline-none cursor-pointer mr-2"
                    data-testid="reset"
                    id="reset"
                    src="[object Object]"
                  />
                  <img
                    alt="zoomIn"
                    class="outline-none cursor-pointer mr-2"
                    data-testid="zoomIn"
                    id="zoomIn"
                    src="[object Object]"
                  />
                  <img
                    alt="zoomOut"
                    class="outline-none cursor-pointer"
                    data-testid="zoomOut"
                    id="zoomOut"
                    src="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-3 col-sm-12"
    >
      <button
        class="cursor-disabled mr-3 float-right btn btn-secondary disabled"
        data-testid="next"
        disabled=""
        type="button"
      >
        Next
      </button>
      <button
        class="mr-2 float-right back-button btn btn-secondary"
        data-testid="back"
        type="button"
      >
        Back
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`createBooking testing BookingModalWindow snapshot testing 1`] = `<DocumentFragment />`;

exports[`createBooking testing BookingShifts snapshot testing 1`] = `
<DocumentFragment>
  <div
    class="mt-5 row"
    id="shifts"
  >
    <div
      class="col-sm-3 text-center"
    >
      <img
        alt="calendar"
        src="[object Object]"
      />
      <div
        class="text-center mt-n-4rem"
      >
        <div>
          <strong
            class="text-uppercase font-weight-700"
          >
            Monday
          </strong>
        </div>
        <h2>
          28
        </h2>
      </div>
      <div
        class="font-weight-300 font-tiny"
      >
        <span
          class="text-uppercase"
        >
          December
        </span>
        <span
          class="ml-2"
        >
          2020
        </span>
      </div>
    </div>
    <div
      class="col-sm-9"
    >
      <div
        class="shifts-height pr-2"
      >
        <div
          class="text-center text-danger"
        >
          Please Select a Valid Date
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`createBooking testing ConfirmBookingModalScreen snapshot testing 1`] = `
<DocumentFragment>
  <div
    class="m-0 mt-4 confirmWindowHeight thin-scrollbar scrollable-list row"
  >
    <div
      class="rounded bg-ghost-white col-sm-12"
    >
      <div
        class="p-2 row"
      >
        <div
          class="text-center col-3 col-sm-2 col-md-2 col-lg-2"
        >
          <img
            alt="calendar"
            height="60"
            src="[object Object]"
            width="60"
          />
        </div>
        <div
          class="mt-2 pl-0 col-9 col-sm-10 col-md-10 col-lg-10"
        >
          <div
            class="light-text"
          >
            Shift ,01:45 AM US/Central - 10:15 AM US/Central
          </div>
        </div>
      </div>
      <div
        class="mt-3 row"
      >
        <div
          class="col-3 col-sm-2 text-center col-md-2 col-lg-2"
        >
          <img
            alt="location"
            class="mt-2"
            height="50"
            src="[object Object]"
            width="50"
          />
        </div>
        <div
          class="col-9 col-sm-10 col-md-10 col-lg-10"
        >
          <div
            class="row"
          >
            <div
              class="mt-2 pl-0 col-12 col-sm-12 col-md-12 col-lg-12"
            >
              <h3
                class="ml-2 font-weight-700"
              >
                Work Station #96
                <span
                  class="chip ml-3 mt-1"
                >
                  <img
                    alt="selectedUser"
                    class="mr-1 ml-n1"
                    height="20"
                    src="[object Object]"
                    width="20"
                  />
                  raja
                </span>
              </h3>
              <div
                class="light-text mb-2 ml-2"
              >
                WMB/WBL/F#10/WS/Z#2/Row#8/WS#96
              </div>
            </div>
          </div>
          <div
            class="mt-3 row"
          >
            <ul
              class="ant-timeline"
            />
          </div>
        </div>
        <div
          class="col-3 col-sm-2 text-center col-md-2 col-lg-2"
        >
          <img
            alt="location"
            class="mt-2"
            height="50"
            src="[object Object]"
            width="50"
          />
        </div>
        <div
          class="col-9 col-sm-10 col-md-10 col-lg-10"
        >
          <div
            class="row"
          >
            <div
              class="mt-2 pl-0 col-12 col-sm-12 col-md-12 col-lg-12"
            >
              <h3
                class="ml-2 font-weight-700"
              >
                Work Station #96
                <span
                  class="chip ml-3 mt-1"
                >
                  <img
                    alt="selectedUser"
                    class="mr-1 ml-n1"
                    height="20"
                    src="[object Object]"
                    width="20"
                  />
                  raja
                </span>
              </h3>
              <div
                class="light-text mb-2 ml-2"
              >
                WMB/WBL/F#10/WS/Z#2/Row#8/WS#96
              </div>
            </div>
          </div>
          <div
            class="mt-3 row"
          >
            <ul
              class="ant-timeline"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`createBooking testing ConfirmBookingModalWindow snapshot testing 1`] = `<DocumentFragment />`;

exports[`createBooking testing WorkStationTypes snapshot testing 1`] = `
<DocumentFragment>
  <div
    class="m-0 row"
  >
    <div
      class="bg-azure mx-2 px-0 mt-2 text-center cursor-pointer border-color-manatee-1px border-radius-2px b-r-sm col-sm-2"
    >
      <div>
        <img
          alt="workspace"
          height="90"
          src="undefined/web/image/mro.asset.category/211/image_medium/211.png"
          width="90"
        />
      </div>
      <h4
        class="mb-3"
      >
        Conference Room
      </h4>
    </div>
    <div
      class="bg-azure mx-2 px-0 mt-2 text-center cursor-pointer  col-sm-2"
    >
      <div>
        <img
          alt="workspace"
          height="90"
          src="undefined/web/image/mro.asset.category/212/image_medium/212.png"
          width="90"
        />
      </div>
      <h4
        class="mb-3"
      >
        Work Station
      </h4>
    </div>
  </div>
</DocumentFragment>
`;
